# WFC-MDP

./: .gitignore  README.md  best_evolved_binary_agent.pkl  biome_adjacency_rules.py  biome_wfc.py  convergence_summary.csv  env.py  environment.yml  evolution.py  fast_wfc.py  fi2pop.cpp  fi2pop.py  hyperparams_59707096.out  output.txt  pacman_maze.py  plot.py  plot_backup.py  pyproject.toml  render.py  requirements.txt  setup.py  slice_tiles.py  tune_hyperparams.py  utils.py  wfc.cpp  wfc.py  wfc_env.py  wfc_pacman_tiles.py
assets/: biome_adjacency_rules.json  biome_adjacency_rules.py  slice_tiles.py
core/: evolution.py  fi2pop.py  mcts.py  rl.py  wfc.py  wfc_env.py
cpp/: CMakeLists.txt  wfc.cpp  wfc_wrapper.cpp
data/: biome.json  biome_adjacency_rules.py
examples/: train_ppo_agent.py  wfc_pacman_tiles.py  wfc_sokoban_tiles.py
hyperparameters/: 1d_binary_hard_hyperparams.yml  baseline_binary_hyperparameters.yaml  baseline_biomes_hyperparameters.yaml  baseline_combo_grass_hyperparameters.yaml  baseline_combo_pond_hyperparameters.yaml  baseline_combo_river_hyperparameters.yaml  best_hyperparameters.yaml  binary_1d_hyperparameters.yaml  binary_2d_hyperparameters.yaml  binary_hyperparameters.yaml  biomes_1d_hyperparameters.yaml  biomes_1d_hyperparameters_run_once.yaml  biomes_2d_hyperparameters.yaml  combo_grass_1d_hyperparameters.yaml  combo_grass_2d_hyperparameters.yaml  combo_pond_1d_hyperparameters.yaml  combo_pond_2d_hyperparameters.yaml  combo_river_1d_hyperparameters.yaml  combo_river_2d_hyperparameters.yaml  fi2pop_binary_hyperparameters.yaml  rl_binary.yaml  (+5 more)
(+144 files in other folders)
