[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.15",
    "nanobind>=1.5.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["optimizing_wfc"]

[project]
name = "optimizing_wfc"
version = "0.1.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "Wave Function Collapse implementation with RL optimization"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "gymnasium",
    "stable_baselines3",
    "torch",
    "nanobind>=1.5.0",
]